Refactor: 과도한 디버그 로깅 구문 제거